--- a/Nomad/Nomad/Base.lproj/LaunchScreen.storyboard
+++ b/Nomad/Nomad/Base.lproj/LaunchScreen.storyboard
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9532" systemVersion="15D21" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" initialViewController="01J-lp-oVM">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10116" systemVersion="15D21" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" initialViewController="01J-lp-oVM">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9530"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
@@ -15,7 +16,34 @@
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logoTransparent" translatesAutoresizingMaskIntoConstraints="NO" id="mZt-lu-v1A">
+                                <rect key="frame" x="150" y="100" width="300" height="300"/>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logoText" translatesAutoresizingMaskIntoConstraints="NO" id="NBb-Gb-mVt">
+                                <rect key="frame" x="20" y="430" width="560" height="74"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="74" id="zdL-9C-VNU"/>
+                                </constraints>
+                            </imageView>
+                        </subviews>
+                        <color key="backgroundColor" red="0.32549019607843138" green="0.32156862745098042" blue="0.32549019607843138" alpha="1" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstItem="NBb-Gb-mVt" firstAttribute="top" secondItem="mZt-lu-v1A" secondAttribute="bottom" constant="30" id="02w-wf-kod"/>
+                            <constraint firstItem="mZt-lu-v1A" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" constant="-50" id="2DO-1n-gq0"/>
+                            <constraint firstItem="mZt-lu-v1A" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="Ze5-6b-2t3" secondAttribute="leadingMargin" constant="45" id="2K0-mb-1Oi"/>
+                            <constraint firstItem="NBb-Gb-mVt" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leadingMargin" id="9im-lU-Clq"/>
+                            <constraint firstItem="NBb-Gb-mVt" firstAttribute="trailing" secondItem="Ze5-6b-2t3" secondAttribute="trailingMargin" id="9q1-E7-OJN"/>
+                            <constraint firstItem="mZt-lu-v1A" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="fLQ-7v-Fb7"/>
+                            <constraint firstItem="xb3-aO-Qok" firstAttribute="top" secondItem="NBb-Gb-mVt" secondAttribute="bottom" constant="28" id="nWx-9v-uX6"/>
+                            <constraint firstItem="mZt-lu-v1A" firstAttribute="top" secondItem="Llm-lL-Icb" secondAttribute="bottom" constant="40" id="wXP-e9-E9G"/>
+                        </constraints>
+                        <variation key="default">
+                            <mask key="constraints">
+                                <exclude reference="wXP-e9-E9G"/>
+                                <exclude reference="nWx-9v-uX6"/>
+                            </mask>
+                        </variation>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -23,4 +51,8 @@
             <point key="canvasLocation" x="53" y="375"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="logoText" width="256" height="74"/>
+        <image name="logoTransparent" width="300" height="300"/>
+    </resources>
 </document>
