--- a/Nomad/View Controllers/HomeViewController.xib
+++ b/Nomad/View Controllers/HomeViewController.xib
@@ -1,15 +1,18 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10116" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10116" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="HomeViewController" customModule="Nomad" customModuleProvider="target">
             <connections>
-                <outlet property="addEntryButton" destination="9nE-do-6Fq" id="LRJ-s9-pSr"/>
-                <outlet property="startButton" destination="VrE-gP-LGa" id="wMW-Wm-vjf"/>
+                <outlet property="addEntryButton" destination="417-aS-nI5" id="UeX-1m-172"/>
+                <outlet property="constraintCenterXAddEntry" destination="dFY-rO-6us" id="xJ5-Yg-zYZ"/>
+                <outlet property="constraintCenterXMyAdventures" destination="j01-Eo-Bxa" id="Ot2-u8-T64"/>
+                <outlet property="contraintCenterXEndAdventure" destination="8nq-O3-hLI" id="Kmy-Qs-h6X"/>
+                <outlet property="startButton" destination="Ekq-Cv-jPn" id="Ws5-xY-tl6"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
-                <outlet property="viewEntriesButton" destination="Wfs-rh-hJA" id="VQF-C7-eyB"/>
+                <outlet property="viewTripsButton" destination="qjA-NZ-ydi" id="61C-ub-bGW"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -17,92 +20,76 @@
             <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="IXg-jV-QNZ">
-                    <rect key="frame" x="8" y="532" width="584" height="30"/>
-                    <color key="backgroundColor" red="0.79780409697920773" green="0.96079962092079774" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                    <state key="normal" title="View Adventures">
-                        <color key="titleColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="whiteLogoTransparent" translatesAutoresizingMaskIntoConstraints="NO" id="7Yz-pV-gqc">
+                    <rect key="frame" x="200" y="35" width="200" height="220"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="220" id="AAt-lm-vUZ"/>
+                        <constraint firstAttribute="width" constant="200" id="aOo-52-KRL"/>
+                    </constraints>
+                </imageView>
+                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Artboard-1" translatesAutoresizingMaskIntoConstraints="NO" id="m1z-Iu-Ye8">
+                    <rect key="frame" x="0.0" y="387" width="600" height="249"/>
+                </imageView>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ekq-Cv-jPn">
+                    <rect key="frame" x="228" y="319" width="145" height="40"/>
+                    <fontDescription key="fontDescription" type="system" weight="light" pointSize="23"/>
+                    <state key="normal" title="end adventure">
+                        <color key="titleColor" red="0.9796310587" green="1" blue="0.83503603749999999" alpha="1" colorSpace="calibratedRGB"/>
                     </state>
                     <connections>
-                        <action selector="viewTripsTapped:" destination="-1" eventType="touchUpInside" id="RGO-Ig-k7u"/>
+                        <action selector="startTripTapped:" destination="-1" eventType="touchUpInside" id="eNu-Pv-rlE"/>
                     </connections>
                 </button>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Nomad" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="B38-Vg-rme">
-                    <rect key="frame" x="8" y="75" width="584" height="54"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="45"/>
-                    <color key="textColor" red="0.47472065954546522" green="0.9873051643371582" blue="0.67038033801089603" alpha="1" colorSpace="calibratedRGB"/>
-                    <nil key="highlightedColor"/>
-                </label>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="VrE-gP-LGa">
-                    <rect key="frame" x="8" y="477" width="584" height="30"/>
-                    <color key="backgroundColor" red="0.8232702526346295" green="1" blue="0.83668065155618565" alpha="1" colorSpace="calibratedRGB"/>
-                    <state key="normal" title="Start Adventure">
-                        <color key="titleColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="417-aS-nI5">
+                    <rect key="frame" x="252" y="367" width="96" height="40"/>
+                    <fontDescription key="fontDescription" type="system" weight="light" pointSize="23"/>
+                    <state key="normal" title="add entry">
+                        <color key="titleColor" red="0.9796310587" green="1" blue="0.83503603749999999" alpha="1" colorSpace="calibratedRGB"/>
                     </state>
                     <connections>
-                        <action selector="startTripTapped:" destination="-1" eventType="touchUpInside" id="nGh-kv-UzR"/>
+                        <action selector="addEntryTapped:" destination="-1" eventType="touchUpInside" id="pER-U2-N4Q"/>
                     </connections>
                 </button>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="your interactive travel scrapbook" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Arz-OU-7K2">
-                    <rect key="frame" x="8" y="137" width="584" height="21"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                    <nil key="highlightedColor"/>
-                </label>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9nE-do-6Fq">
-                    <rect key="frame" x="8" y="422" width="584" height="30"/>
-                    <color key="backgroundColor" red="0.97963105873104306" green="1" blue="0.83503603746882593" alpha="1" colorSpace="calibratedRGB"/>
-                    <state key="normal" title="Add Entry">
-                        <color key="titleColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qjA-NZ-ydi">
+                    <rect key="frame" x="226" y="271" width="148" height="40"/>
+                    <fontDescription key="fontDescription" type="system" weight="light" pointSize="23"/>
+                    <state key="normal" title="my adventures">
+                        <color key="titleColor" red="0.9796310587" green="1" blue="0.83503603749999999" alpha="1" colorSpace="calibratedRGB"/>
                     </state>
                     <connections>
-                        <action selector="addEntryTapped:" destination="-1" eventType="touchUpInside" id="TKc-Jn-7KL"/>
-                    </connections>
-                </button>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Wfs-rh-hJA">
-                    <rect key="frame" x="8" y="367" width="584" height="30"/>
-                    <color key="backgroundColor" red="0.84734324682865381" green="0.7952637312526305" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                    <state key="normal" title="View Current Adventure">
-                        <color key="titleColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
-                    </state>
-                    <connections>
-                        <action selector="viewEntriesTapped:" destination="-1" eventType="touchUpInside" id="KJi-v7-hgK"/>
+                        <action selector="viewTripsTapped:" destination="-1" eventType="touchUpInside" id="eR3-af-SVu"/>
                     </connections>
                 </button>
             </subviews>
-            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+            <color key="backgroundColor" red="0.50588235294117645" green="0.79607843137254897" blue="0.67843137254901964" alpha="1" colorSpace="calibratedRGB"/>
             <constraints>
-                <constraint firstItem="Arz-OU-7K2" firstAttribute="top" secondItem="B38-Vg-rme" secondAttribute="bottom" constant="8" id="4OY-Ml-msN"/>
-                <constraint firstAttribute="trailing" secondItem="Arz-OU-7K2" secondAttribute="trailing" constant="8" id="4R6-CM-oyS"/>
-                <constraint firstItem="Arz-OU-7K2" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="7KK-yG-MBH"/>
-                <constraint firstAttribute="trailing" secondItem="B38-Vg-rme" secondAttribute="trailing" constant="8" id="Bhy-Nm-yV9"/>
-                <constraint firstAttribute="trailing" secondItem="Wfs-rh-hJA" secondAttribute="trailing" constant="8" id="DIb-gS-vDo"/>
-                <constraint firstItem="B38-Vg-rme" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="8" id="EDb-Ve-Y28"/>
-                <constraint firstItem="9nE-do-6Fq" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="8" id="FIO-EO-9uG"/>
-                <constraint firstItem="VrE-gP-LGa" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="8" id="Jsc-xI-sch"/>
-                <constraint firstItem="IXg-jV-QNZ" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="8" id="L9V-Io-yey"/>
-                <constraint firstItem="B38-Vg-rme" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="NR5-46-cGH"/>
-                <constraint firstItem="IXg-jV-QNZ" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="QPf-RS-7J0"/>
-                <constraint firstItem="IXg-jV-QNZ" firstAttribute="top" secondItem="VrE-gP-LGa" secondAttribute="bottom" constant="25" id="RWZ-Jb-Pcv"/>
-                <constraint firstAttribute="trailing" secondItem="9nE-do-6Fq" secondAttribute="trailing" constant="8" id="VLo-yA-IgO"/>
-                <constraint firstItem="B38-Vg-rme" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="75" id="bM9-EF-YSK"/>
-                <constraint firstItem="Wfs-rh-hJA" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="8" id="emc-4Z-KIR"/>
-                <constraint firstItem="Wfs-rh-hJA" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="8" id="icR-d5-dtZ"/>
-                <constraint firstItem="VrE-gP-LGa" firstAttribute="top" secondItem="9nE-do-6Fq" secondAttribute="bottom" constant="25" id="nLZ-BH-4J4"/>
-                <constraint firstAttribute="bottom" secondItem="IXg-jV-QNZ" secondAttribute="bottom" constant="38" id="pWb-w2-ILc"/>
-                <constraint firstAttribute="trailing" secondItem="Wfs-rh-hJA" secondAttribute="trailing" constant="8" id="pZi-7G-TbX"/>
-                <constraint firstAttribute="trailing" secondItem="VrE-gP-LGa" secondAttribute="trailing" constant="8" id="rqO-tm-Y1P"/>
-                <constraint firstAttribute="trailing" secondItem="VrE-gP-LGa" secondAttribute="trailing" constant="8" id="rxp-6k-3QT"/>
-                <constraint firstItem="Arz-OU-7K2" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="8" id="tt6-5z-TCd"/>
-                <constraint firstItem="9nE-do-6Fq" firstAttribute="top" secondItem="Wfs-rh-hJA" secondAttribute="bottom" constant="25" id="vTw-8I-i7X"/>
-                <constraint firstAttribute="trailing" secondItem="IXg-jV-QNZ" secondAttribute="trailing" constant="8" id="vil-hi-Ng5"/>
+                <constraint firstAttribute="trailing" secondItem="m1z-Iu-Ye8" secondAttribute="trailing" id="4Nx-fY-neC"/>
+                <constraint firstItem="Ekq-Cv-jPn" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="8nq-O3-hLI"/>
+                <constraint firstItem="Ekq-Cv-jPn" firstAttribute="top" secondItem="qjA-NZ-ydi" secondAttribute="bottom" constant="8" id="BXR-E0-NYw"/>
+                <constraint firstItem="qjA-NZ-ydi" firstAttribute="top" secondItem="7Yz-pV-gqc" secondAttribute="bottom" constant="16" id="Nnt-Tk-Y99"/>
+                <constraint firstAttribute="bottom" secondItem="m1z-Iu-Ye8" secondAttribute="bottom" constant="-36" id="OB0-Cu-x27"/>
+                <constraint firstItem="417-aS-nI5" firstAttribute="top" secondItem="Ekq-Cv-jPn" secondAttribute="bottom" constant="8" id="PEl-nB-Y88"/>
+                <constraint firstItem="7Yz-pV-gqc" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="Ygh-hd-hat"/>
+                <constraint firstItem="m1z-Iu-Ye8" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="aqX-Kf-995"/>
+                <constraint firstItem="417-aS-nI5" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="dFY-rO-6us"/>
+                <constraint firstItem="7Yz-pV-gqc" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="35" id="f3W-3Q-D3S"/>
+                <constraint firstAttribute="trailing" secondItem="7Yz-pV-gqc" secondAttribute="trailing" constant="20" id="goH-7x-7GD"/>
+                <constraint firstItem="qjA-NZ-ydi" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="j01-Eo-Bxa"/>
+                <constraint firstItem="7Yz-pV-gqc" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="20" id="mGp-4g-vcv"/>
+                <constraint firstItem="7Yz-pV-gqc" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="9" id="t9R-FE-Opu"/>
             </constraints>
             <variation key="default">
                 <mask key="constraints">
-                    <exclude reference="rqO-tm-Y1P"/>
+                    <exclude reference="goH-7x-7GD"/>
+                    <exclude reference="mGp-4g-vcv"/>
+                    <exclude reference="t9R-FE-Opu"/>
                 </mask>
             </variation>
             <point key="canvasLocation" x="436" y="378"/>
         </view>
     </objects>
+    <resources>
+        <image name="Artboard-1" width="467" height="249"/>
+        <image name="whiteLogoTransparent" width="300" height="300"/>
+    </resources>
 </document>
